k8s/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    app: miamo
    env: __ENV__
